--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,11 +17,14 @@ dev_dependencies:
   flutter_lints: ^5.0.0
 
 flutter:
+  assets:
+    - assets/images/
+    
   fonts:
       - family: Poppins
         fonts:
-          - asset: fonts/Poppins-Regular.ttf
-          - asset: fonts/Poppins-Medium.ttf
-          - asset: fonts/Poppins-Bold.ttf
+          - asset: assets/fonts/Poppins-Regular.ttf
+          - asset: assets/fonts/Poppins-Medium.ttf
+          - asset: assets/fonts/Poppins-Bold.ttf
             weight: 700
   uses-material-design: true
